fixed overflowing text

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -65,7 +65,6 @@
 }
 
 .slideshow {
-    overflow: hidden;
     width: 50%;
     height: 100%;
 }
